# mrstack

./: .gitignore  LICENSE  README.en.md  README.md  install.sh  pyproject.toml
.github/workflows/: release.yml
config/: com.mrstack.claude-telegram.plist  mcp-config.example.json  start-daemon.sh  start.sh
docs/: integration-guide.md  threads-post-final.md  threads-post-v2.md  threads-post.md  x-post.md
examples/: env.example  register-jobs.py
mrstack/: __init__.py  banner.py  cli.py  constants.py  daemon.py  patcher.py  wizard.py
schedulers/: manage-jobs.sh  morning-briefing.sh  register-jobs.py  run-threads-briefing.sh  weekly-review.sh
scrapers/threads/: briefing.js  config.json  package.json  save-to-notion.sh  scraper.js
src/api/: dashboard.py
src/api/templates/: dashboard.html
src/bot/handlers/: callback.py  command.py
src/bot/utils/: keyboards.py  ui_components.py
src/claude/: session.py
src/jarvis/: __init__.py  coach.py  context_engine.py  pattern_learner.py  persona.py  platform.py
src/knowledge/: __init__.py  manager.py  memory_index.py
templates/: alert.md  morning-briefing.md  weekly-review.md
