[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mrstack"
version = "1.1.0"
description = "Proactive AI Butler for Claude Code — Telegram Bot with Memory, Jarvis Mode, and Daily Coaching"
readme = "README.en.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "DD", email = "dd@whynowlab.com" }]
keywords = ["claude", "telegram", "ai", "butler", "assistant", "jarvis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "psutil>=5.9",
]

# claude-code-telegram is installed separately from GitHub:
#   uv tool install git+https://github.com/RichardAtCT/claude-code-telegram@latest
# mrstack init handles this automatically.

[project.urls]
Homepage = "https://github.com/whynowlab/mrstack"
Repository = "https://github.com/whynowlab/mrstack"
Issues = "https://github.com/whynowlab/mrstack/issues"

[project.scripts]
mrstack = "mrstack.cli:app"

# ── Hatchling build config ─────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["mrstack"]

[tool.hatch.build.targets.wheel.force-include]
"src" = "mrstack/_overlay"
"config" = "mrstack/_data/config"
"schedulers" = "mrstack/_data/schedulers"
"templates" = "mrstack/_data/templates"

[tool.hatch.build.targets.sdist]
include = [
    "mrstack/",
    "src/",
    "config/",
    "schedulers/",
    "templates/",
    "pyproject.toml",
    "README.md",
    "README.en.md",
    "LICENSE",
]
